--- a/jeesns-web/.settings/org.eclipse.wst.common.component
+++ b/jeesns-web/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,21 @@
         <wb-resource deploy-path="/" source-path="/src/main/webapp" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/java"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src/main/resources"/>
+        <dependent-module archiveName="jeesns-core-1.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jeesns-core/jeesns-core">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jeesns-model-1.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jeesns-model/jeesns-model">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jeesns-common-1.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jeesns-common/jeesns-common">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jeesns-dao-1.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jeesns-dao/jeesns-dao">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+        <dependent-module archiveName="jeesns-service-1.2.jar" deploy-path="/WEB-INF/lib" handle="module:/resource/jeesns-service/jeesns-service">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
         <property name="context-root" value="jeesns-web"/>
         <property name="java-output-path" value="/jeesns-web/target/classes"/>
     </wb-module>
